--- a/demo/pages/demo/uploader/tUpload.html
+++ b/demo/pages/demo/uploader/tUpload.html
@@ -30,7 +30,7 @@
   <h2>仿微博头像上传</h2>
    <!--仿微博头像上传-->
   <!--===================================================-->
-  <img id="testTX" style="width:80px;height:80px;"/>
+  <img id="testTX" style="width:80px;height:80px; position: absolute;"/>
   <div id="txUp" class="layer_edit_avatar W_layer" style="margin:50px auto;">
      <!--顶部按钮-->
     <div class="WB_minitab">
