--- a/demo/pages/demo/uploader/tUpload.html
+++ b/demo/pages/demo/uploader/tUpload.html
@@ -14,6 +14,7 @@
     <link href="/js/plugins/upload/jquery.Jcrop/css/jquery.Jcrop.css" rel="stylesheet" type="text/css">
     <script src="/js/plugins/upload/jquery.Jcrop/jquery.Jcrop.js"></script>
     <script src="/js/plugins/upload/services.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script src="/js/plugins/upload/servicesTx.js"></script>
 </head>
 <body> 
@@ -30,7 +31,7 @@
   <h2>仿微博头像上传</h2>
    <!--仿微博头像上传-->
   <!--===================================================-->
-  <img id="testTX" style="width:80px;height:80px; position: absolute;"/>
+  <img id="testTX" style="width:80px;position: absolute;"/>
   <div id="txUp" class="layer_edit_avatar W_layer" style="margin:50px auto;">
      <!--顶部按钮-->
     <div class="WB_minitab">
