--- a/demo/pages/demo/uploader/tUpload.html
+++ b/demo/pages/demo/uploader/tUpload.html
@@ -28,11 +28,13 @@
 </div>
   <!--tUploadjs-->
   <!--===================================================-->
-  <h2>仿微博头像上传</h2>
-  <p>解决ios设备上传长宽错误问题</p>
+  <p style="text-align: center;">
+    <span style="font-weight: bold;font-size: 20px;">仿微博头像上传</span>
+  <span>解决ios设备上传长宽错误问题</span>
+</p>
+<p style="text-align: center;"><img id="testTX"  style="width:80px;height:80px;"/></p>
    <!--仿微博头像上传-->
   <!--===================================================-->
-  <img id="testTX" style="width:80px;height:80px;position: absolute;"/>
   <div id="txUp" class="layer_edit_avatar W_layer" style="margin:50px auto;">
      <!--顶部按钮-->
     <div class="WB_minitab">
