--- a/demo/pages/demo/uploader/tUpload.html
+++ b/demo/pages/demo/uploader/tUpload.html
@@ -36,7 +36,7 @@
 
   <p style="text-align: center;">
     <span style="font-weight: bold;font-size: 20px;">仿微博头像上传</span>
-  <span>解决ios设备上传长宽BUG</span>
+  <span>解决ios设备上传图片长宽BUG</span>
 </p>
 <p style="text-align: center;"><img id="testTX"  style="width:80px;height:80px;"/></p>
    <!--仿微博头像上传-->
