--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -34,7 +34,7 @@
             <button id="btnObj" >加载obj模型</button>
             <button id="btnGltf" >加载gltf模型</button>
             <button id="btnFbx" >加载fbx模型</button>
-            <button id="btnJson" >加载json模型</button>
+            <button id="btnJson" >模拟火箭发射</button>
         </aside>
         <div class="svg-container" style="display:none;">
                 <svg id="svg_shapes" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="90 0 600 560">
