--- a/demo/pages/demo/dialog/qq.html
+++ b/demo/pages/demo/dialog/qq.html
@@ -6,8 +6,8 @@
     <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/jquery-2.2.4.min.js"></script>
     <!-- <link href="https://lastsoup.github.io/themes/nifty/css/nifty.css" rel="stylesheet"> -->
     <link href="https://lastsoup.github.io/themes/nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
-    <link href="css/demo.css" rel="stylesheet">
-    <script src="jquery.imagepreview.js"></script>
+    <link href="/js/plugins/imagepreview/css/demo.css" rel="stylesheet">
+    <script src="/js/plugins/imagepreview/jquery.imagepreview.js"></script>
 </head>
 <body>
     <p style="text-align: center;">
