--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 <body>
     <div id="app" class="page" :class="[$route.path =='/404' ? 'erro' : '']">
         <div class="top">
-        <h1>元</h1>
+        <h1><i class="iconfont">&#xe601;</i></h1>
         <!-- <input :value="$route.path"/> -->
         <div>
             <input id="firstTitle" type="hidden" :value="$route.meta.title" />
