--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <script type="text/javascript" src="./js/libs/three.js"></script>
     <script type="text/javascript" src="./js/libs/OrbitControls.js"></script>
+    <!-- SVG -->
     <script type="text/javascript" src="./js/loaders/d3_threeD.js"></script>
     <!-- HDR -->
     <script type="text/javascript" src="./js/loaders/RGBELoader.js"></script>
