--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -30,7 +30,7 @@
         <canvas id="renderCanvas"></canvas>
         <button class="btn-setting"><i class="iconfont">&#xe613;</i></button>
         <aside class="aside-container">
-            <p class="text-semibold text-main mar-no">显示设置</p>
+            <p class="text-semibold text-main mar-no">模型设置</p>
             <button id="btnSVGMall" >加载svg图形</button>
             <button id="btnObj" >加载obj模型</button>
             <button id="btnGltf" >加载gltf模型</button>
