--- a/demo/pages/demo/form/form.html
+++ b/demo/pages/demo/form/form.html
@@ -211,7 +211,7 @@
         </table>
         </div>
         <div class="btn-area" id="btn-area" style="display:block;">
-            <button type="button" class="btn btn-default" id="form-save">保存草稿</button>&nbsp;
+            <button type="button" class="btn btn-default" id="form-save">开始验证</button>&nbsp;
             <button type="button" class="btn btn-primary" id="form-submit">提交审核</button>&nbsp;
             <button type="button" class="btn btn-danger" id="form-back">退回审核</button>
         </div>
