--- a/demo/pages/extension/map.html
+++ b/demo/pages/extension/map.html
@@ -27,10 +27,10 @@
     //baidu
     var f=new ShowMap({isedit:false});
     f.map.setMinZoom(10);
-    f.map.setMaxZoom(19);
-    f.CommonHander.getBoundary("南京",13);
+    f.map.setMaxZoom(20);
+    f.CommonHander.getBoundary("南京",12);
     //webig
-    initgis(); //gis init
+    //initgis(); //gis init
    </script>
 </body>
 </html>
