--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -64,6 +64,8 @@
             </div>
     <script type="text/javascript" src="js/index.js"></script>
     <script>
+        main.init();
+main.initModel();
     $(".btn-setting").click(function(){
       $(".aside-container").toggle();
     });
