--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.js"></script>
     <link rel="stylesheet" href="./css/main.css">
+    <!-- <script type="text/javascript" src="./js/libs/three-old.js"></script> -->
     <script type="text/javascript" src="./js/libs/three.js"></script>
     <script type="text/javascript" src="./js/libs/OrbitControls.js"></script>
     <!-- SVG -->
