--- a/demo/pages/demo/webgl/index.html
+++ b/demo/pages/demo/webgl/index.html
@@ -82,11 +82,11 @@ main.initModel();
     });
 
     $("#btnObj").click(function(){
-        main.addTreeMod();
+        main.addMtlMod();
     });
 
     $("#btnGltf").click(function(){
-        main.addDamagedHelmetMod();
+        main.addGltfMod();
     });
 
     $("#btnFbx").click(function(){
