--- a/demo/index.html
+++ b/demo/index.html
@@ -48,9 +48,9 @@
 
     <script>
         $(function () {                
-               $('#tabs').tabs('addIframeTab',{
+                $('#tabs').tabs('addIframeTab',{
                     tab:{title:"欢迎使用",closable:false},
-                    iframe:{src:"http://www.0non0.com"}
+                    iframe:{src:"https:/baidu.com"}
                 });
                 $.addTab($("#firstTitle").val(),$("#firstSrc").val());
                 $.ajax({
